// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test AuthButton component should renders apple auth button correctly for sign-in screen 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "black",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "opacity": 1,
      "paddingBottom": 18,
      "paddingTop": 18,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 35,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 30,
          "marginLeft": 20,
          "width": 30,
        }
      }
    />
  </View>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 16,
      }
    }
  >
    Continue with Apple
  </Text>
</View>
`;

exports[`Test AuthButton component should renders apple auth button correctly for sign-up screen 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "black",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "opacity": 1,
      "paddingBottom": 18,
      "paddingTop": 18,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 35,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 30,
          "marginLeft": 20,
          "width": 30,
        }
      }
    />
  </View>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 16,
      }
    }
  >
    Sign up with Apple
  </Text>
</View>
`;

exports[`Test AuthButton component should renders facebook auth button correctly for sign-in screen 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "blue",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "opacity": 1,
      "paddingBottom": 18,
      "paddingTop": 18,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 35,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 30,
          "marginLeft": 20,
          "width": 30,
        }
      }
    />
  </View>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 16,
      }
    }
  >
    Continue with Facebook
  </Text>
</View>
`;

exports[`Test AuthButton component should renders facebook auth button correctly for sign-up screen 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "blue",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "opacity": 1,
      "paddingBottom": 18,
      "paddingTop": 18,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 35,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 30,
          "marginLeft": 20,
          "width": 30,
        }
      }
    />
  </View>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 16,
      }
    }
  >
    Sign up with Facebook
  </Text>
</View>
`;

exports[`Test AuthButton component should renders google auth button correctly for sign-in screen 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "blue",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "opacity": 1,
      "paddingBottom": 18,
      "paddingTop": 18,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 35,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 30,
          "marginLeft": 20,
          "width": 30,
        }
      }
    />
  </View>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 16,
      }
    }
  >
    Continue with Facebook
  </Text>
</View>
`;

exports[`Test AuthButton component should renders google auth button correctly for sign-up screen 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "blue",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "flex-start",
      "opacity": 1,
      "paddingBottom": 18,
      "paddingTop": 18,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 35,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 30,
          "marginLeft": 20,
          "width": 30,
        }
      }
    />
  </View>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 16,
      }
    }
  >
    Sign up with Facebook
  </Text>
</View>
`;
